# ChangeLog for sys-fs/archivemount
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*archivemount-0.6.1 (13 Oct 2010)

  13 Oct 2010; Dean Matzkov <bapabooiee@gmail.com>
  +archivemount-0.6.1.ebuild:
  Version bump
