@@ -1,4 +1,3 @@
-DIST archivemount-0.6.0.tar.gz 187117 RMD160 db3546b7ebb703393fcd90a0a739248c173b7c39 SHA1 e2b9999ee8217ed150027393c72562ee63bd0f1f SHA256 3e491dee36485c7e9be1cd561ccf27c84492b8770ddafa57f18966312cb8caea
-DIST archivemount-0.6.1.tar.gz 104587 RMD160 9432d99b5f1b19bdfa62f0a692725357b6ea97e8 SHA1 fb8864ebe0f5f8d2a2c314434300b17f5f01dd23 SHA256 9235d6377a70a7c25aa288dab6b0e8ef906d1d219d43e5b8fcdb8cf3ace98e01
-EBUILD archivemount-0.6.0.ebuild 664 RMD160 450160dbbf0c77654f5ba14e9c0df62246d26877 SHA1 f62c223283e0f39328e7e24812a059bdeb367359 SHA256 b0de6d067b4d9c8fd13b7b9ecd1d8f4f97b880fb92240ea384184bb70bb0841c
-EBUILD archivemount-0.6.1.ebuild 664 RMD160 450160dbbf0c77654f5ba14e9c0df62246d26877 SHA1 f62c223283e0f39328e7e24812a059bdeb367359 SHA256 b0de6d067b4d9c8fd13b7b9ecd1d8f4f97b880fb92240ea384184bb70bb0841c
+DIST archivemount-0.6.1.tar.gz 104587 SHA256 9235d6377a70a7c25aa288dab6b0e8ef906d1d219d43e5b8fcdb8cf3ace98e01 SHA512 b4c524b010ca4256a61f0b42d38fb539b5aa5b0c9ac3fdda600410512bf3c3c978ee25efb91f5c90707519bf3d0c69681a7bd621fb40feceb68cb80326bac31d WHIRLPOOL 266a41215f49aa3916b03beddaa4306e626ff40915ba946cb18750cee7fab3c56d56841f1ac48885bbd100df885d452e624bc866e0ff09af3c5aa5a6f06ade28
+EBUILD archivemount-0.6.1.ebuild 664 SHA256 b0de6d067b4d9c8fd13b7b9ecd1d8f4f97b880fb92240ea384184bb70bb0841c SHA512 19c3ec08d64d7ae84d52d652decfb7e6d9772cee2e00f1fe80fc83355703f6c5699f4bd728c14c13e57bdbd459fc358fe040ad1f1fce2ff28ca7e000f273385d WHIRLPOOL 66f0cc1d4018b27760ce078364de86fbf2b0a5fd7ac3997a8566323eae6301adbe38ccb771a892ba3751ad439057fb5fa185acd584feb9559940d247a4270c2a
+MISC ChangeLog 354 SHA256 4b6af2716d0e4af77ae8900107eabc5d89bfa37f7ac4e4da8de748be963ce771 SHA512 a3ccff4b30e4c466a3dd0d00a34eb4d387baf872568c59055ebe92638c7b243c71ae1f5cb1356d4bbb1a7c93b746891ef521bc0ef805340e3e6ff86ea408de96 WHIRLPOOL a0fe546aa75038c1aa28937a9ebe0b8cffe66922994e72e37ada1d2ae85e05737024fe85137290dfb95bcd11890cf1a76ae213b5cde71660727bef52886cfdb8
