@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/archivemount
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  31 Aug 2012; Dean Matzkov <bapabooiee@gmail.com> -archivemount-0.6.0.ebuild:
+  Remove old version.
 
 *archivemount-0.6.1 (13 Oct 2010)
 
